Fix download links from chrome://indexeddb-internals/

Download links from chrome://indexeddb-internals/ always give empty zip file

Bug: 819207
Change-Id: I3490fdf5e837c91cec5cbaf0ebbdfd892471be5e
Reviewed-on: https://chromium-review.googlesource.com/1038864
Reviewed-by: Joshua Bell <jsbell@chromium.org>
Commit-Queue: Joshua Bell <jsbell@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555781}
Former-commit-id: 8b6e6dad2c571b50ac2174019bed0a9243d6f6ab